js/src/tests/test262/built-ins/Error/prototype/stack/getter-not-a-constructor.js

















var get = Object.getOwnPropertyDescriptor(Error.prototype, 'stack').get;

assert.sameValue(
  isConstructor(get),
  false,
  'isConstructor(get Error.prototype.stack) must return false'
);

assert.throws(TypeError, function () {
  new get();
});

reportCompare(0, 0);
